# automata-stuff

./: NFA.py  README.md  automaton.py  automaton_algos.py  pyproject.toml  regex_lib.py  regex_utils.py
automata_stuff/: __init__.py  automaton.py
automata_stuff/algos/: checking.py  conversion.py
automaton_stuff/: DFA.py  algos.py  automaton.py  regex_utils.py
automaton_stuff/algos/: __init__.py  auxiliary.py  conversion.py
automaton_stuff/utils/: regex_utils.py  visualization.py
examples/: example-001.py  example-002.py  example-003.py
