[tool.poetry]
name = "automata-stuff"
version = "0.1.0"
description = "implementation of automata and some related algorithms"
authors = ["gschnabel <40870991+gschnabel@users.noreply.github.com>"]
license = "The Unlicense"
readme = "README.md"
packages = [{include = "automata_stuff"}]

[tool.poetry.dependencies]
python = ">=3.7"
networkx = ">=2.6.2"
matplotlib = ">=3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
